--- a/phpserver.yml
+++ b/phpserver.yml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata: 
     name: phpserver-deploy
+    labels:
+       app: phpserver
 spec: 
    selector: 
        matchLabels:
