--- a/webserver.yml
+++ b/webserver.yml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
    name: webserver-deploy
+   labels:
+      app: webserver
 spec:
    replicas: 1
    selector:
@@ -20,7 +22,7 @@ spec:
                  - containerPort: 8000
                    name: webserver
                volumeMounts:
-                 - name: webserver-storage
+                 - name: webserver-pvc
                    mountPath: /usr/local/apache2/htdocs/
            volumes:
              - name: webserver-storage
